refactor: Centralize quoting of column names [DHIS2-16705] (#16435)